minor refactor (replace String.format with .formatted method)