@@ -2,6 +2,6 @@ package bookkeeper.exception;
 
 public class AccountTransactionNotFound extends HandlerInterruptException {
     public AccountTransactionNotFound(long id) {
-        super(String.format("AccountTransaction with id=%s not found", id));
+        super("AccountTransaction with id=%s not found".formatted(id));
     }
 }
